@@ -5,6 +5,7 @@ opensesame (3.0.6a1-ubuntu1) wily; urgency=medium
     - Handle exotic variable types better in variable inspector (#388)
   * Improvements
     - Add `experiment_file` experimental variable, which contains the file name of the experiment (#387)
+    - Catch warnings when creating a new item and provide an informative message
 
  -- Sebastiaan Mathot <sebastiaan@mantis>  Thu, 21 Jan 2016 20:55:07 +0100
 
